fix jump bug

--- a/react-multi-template-master/src/homepage/Components/style.css
+++ b/react-multi-template-master/src/homepage/Components/style.css
@@ -237,3 +237,7 @@ section.copy p {
 .google-map {
   padding-top: 60px;
 }
+
+.margin-login{
+  margin-right: 20px;
+}
